fixed construction text widths on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -136,8 +136,10 @@ a{
         font-size: 2em;
         font-style: italic;
         margin: 20px 0 20px 0;
+        border: solid red 1px;
+        width: 90%;
         p{
-            border-bottom: solid white 1px;
+            text-decoration: underline;
             width: fit-content;
             margin: 0 auto;
         }
